--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Animal Care</h2>
-                  <p class="item-intro text-muted">Shelters, vets</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="dogs 2.png" alt="">
                   <br><br><br><br>
 
@@ -388,7 +388,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Elderly Services</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="old.jpg" alt="">
                   <p>Visiting Nurse Service of New York</p>
                   <ul class="list-inline">
@@ -453,7 +453,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Medical Services</h2>
-                  <p class="item-intro text-muted">Hospitals, cancer centers</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="kat.jpg" alt="">
                   <br><br><br>
                   <p>New York Presbytarian</p>
@@ -527,7 +527,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Donate</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="ear.jpg" alt="">
                   <p> Jersey City Medical Center</p>
                   <ul class="list-inline">
@@ -592,7 +592,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Homeless Shelters</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="soup.jpg" alt="">
                   <br><br><br>
                   <p>New York Cares - BJ's Place Shelter</p>
@@ -657,7 +657,7 @@
                   <h2>Food Drives</h2>
                   <p class="item-intro text-muted">DONATE FOODS!!</p>
                   <img class="img-fluid d-block mx-auto" src="remyma.jpg" alt="">
-                  <p>Food Bank for New York City</p>
+                  <p></p>
                   <ul class="list-inline">
                     <li>Located in Manhattan</li>
                     <li>Become a member of their volunteer engagement team.</li>
@@ -723,7 +723,7 @@
                   <h2>Parks and Recreation</h2>
                   <p class="item-intro text-muted">Museums, zoos, parks, aquariums</p>
                   <img class="img-fluid d-block mx-auto" src="green-park.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p></p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
                     <li>Client: Threads</li>
@@ -755,7 +755,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Day Care</h2>
-                  <p class="item-intro text-muted">Taking care of kids</p>
+                  <p class="item-intro text-muted"></p>
                   <img class="img-fluid d-block mx-auto" src="kids.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
