--- a/index.html
+++ b/index.html
@@ -60,14 +60,8 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <style>
-          mark {
-            background-color:yellow;
-          color: black;
-          }
-          <mark> <p class="hidden">Welcome to Our Volunteer Helper!.</p> </mark>
-          </style> 
           
+          <p class="hidden">Welcome to Our Volunteer Helper!.</p> 
           <div class="intro-lead-in">Welcome To Our Volunteer Helper!</div>
           <div class="intro-heading">It's Nice To Meet You</div>
           <a href="#services" class="btn btn-xl">About OUR site</a>
