--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Our Team</h2>
+            <h3 class="section-subheading text-muted">Girls Who Code - Viacom - Summer 2017</h3>
           </div>
         </div>
         
