--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <a class="nav-link" href="#team">Our Team</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#contact">Locations</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#signin">Sign In/Sign Up</a>
           </li>
         </ul>
