--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
           
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="alice.jpg" alt="">
               <h4>Alice Mur</h4>
               <p class="text-muted"></p>
             </div>
