--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="ew.jpg" alt="">
               <h4>Precious Richards</h4>
-              <p class="text-muted">a lovely human being</p>
+              <p class="text-muted"></p>
             </div>
           </div>
           
@@ -725,7 +725,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
               <h4>Janelle Cheung</h4>
-              <p class="text-muted">A fellow person</p>
+              <p class="text-muted"></p>
             </div>
           </div>
         </div>
