--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="intro-text">
         
           <div class="intro-lead-in">Welcome To Our Volunteer Helper!</div>
-          <div class="intro-heading">It's Nice To Meet You</div>
+          <div class="intro-heading">TAKE INITIATIVE</div>
           <a href="#services" class="btn btn-xl">About OUR site</a>
         </div>
       </div>
