--- a/log.html
+++ b/log.html
@@ -6,6 +6,52 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="in.css">
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Social Buttons for Bootstrap" />
+    <meta property="og:description" content="Social Sign-In Buttons made in pure CSS based on Bootstrap and Font Awesome!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://lipis.github.io/bootstrap-social/" />
+    <meta property="og:image" content="http://lipis.github.io/bootstrap-social/assets/img/bootstrap-social.png" />
+
+    <link href="bootstrap.css" rel="stylesheet">
+    <link href="font-awesome.css" rel="stylesheet">
+    <link href="docs.css" rel="stylesheet" >
+    <script src="https://use.fontawesome.com/1d553969d7.js"></script>
+
+
+    <link href="bootstrap-social.css" rel="stylesheet" >
+    <script src="jquery.js"/>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-42119746-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+      $(function () {
+        var all_classes = "";
+        var timer = undefined;
+        $.each($('li', '.social-class'), function (index, element) {
+          all_classes += " btn-" + $(element).data("code");
+        });
+        $('li', '.social-class').mouseenter(function () {
+          var icon_name = $(this).data("code");
+          if ($(this).data("icon")) {
+            icon_name = $(this).data("icon");
+          }
+          var icon = "<i class='fa fa-" + icon_name + "'></i>";
+          $('.btn-social', '.social-sizes').html(icon + "Sign in with " + $(this).data("name"));
+          $('.btn-social-icon', '.social-sizes').html(icon);
+          $('.btn', '.social-sizes').removeClass(all_classes);
+          $('.btn', '.social-sizes').addClass("btn-" + $(this).data('code'));
+        });
+        $($('li', '.social-class')[Math.floor($('li', '.social-class').length * Math.random())]).mouseenter();
+      });
+
+    </script>
   <title>Sign-in</title>
 </head>
 <body>
@@ -95,4 +141,41 @@
 
 </div> <!-- /form -->
  <script src="sign.js"></script>
+  <div class="row">
+        <div class="col-sm-4 social-buttons">
+          <h3 class="text-center"></h3>
+
+          <a class="btn btn-block btn-social btn-facebook" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-facebook']);">
+            <span class="fa fa-facebook"></span> Sign in with Facebook
+          </a>
+
+          </a>
+          <a class="btn btn-block btn-social btn-github" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-github']);">
+            <span class="fa fa-github"></span> Sign in with GitHub
+          </a>
+          <a class="btn btn-block btn-social btn-google" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-google']);">
+            <span class="fa fa-google"></span> Sign in with Google
+          </a>
+          <a class="btn btn-block btn-social btn-instagram" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-instagram']);">
+            <span class="fa fa-instagram"></span> Sign in with Instagram
+          </a>
+          <a class="btn btn-block btn-social btn-linkedin" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-linkedin']);">
+            <span class="fa fa-linkedin"></span> Sign in with LinkedIn
+          </a>
+
+          </a>
+          <a class="btn btn-block btn-social btn-pinterest" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-pinterest']);">
+            <span class="fa fa-pinterest"></span> Sign in with Pinterest
+          </a>
+
+          <a class="btn btn-block btn-social btn-twitter" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-twitter']);">
+            <span class="fa fa-twitter"></span> Sign in with Twitter
+          </a>
+
+          <a class="btn btn-block btn-social btn-yahoo" onclick="_gaq.push(['_trackEvent', 'btn-social', 'click', 'btn-yahoo']);">
+            <span class="fa fa-yahoo"></span> Sign in with Yahoo!
+          </a>
+
+          </div>
+        </div>
 </body>
