--- a/index.html
+++ b/index.html
@@ -847,8 +847,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Sign In</h2>
-          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+<!--           <h2 class="section-heading">Sign In</h2>
+          <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
             <a href="#" onclick="onSignIn()"></a>
             <a href="#" onclick="signOut();"></a>
           </div>
