--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="ew.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="final.jpg" alt="">
               <h4>Precious R.</h4>
               <p class="text-muted"> I am a big fan of Stephen Curry, and I love my iphone.</p>
             </div>
