--- a/log.html
+++ b/log.html
@@ -23,7 +23,7 @@
         <div id="signup">
           <h1 id="w">Sign Up!</h1>
 
-          <form action="what.html" method="get">
+          <form action="test.html" method="get">
 
           <div class="top-row">
             <div class="field-wrap">
@@ -64,7 +64,7 @@
         <div id="login">
           <h1 id="h">Welcome Back!</h1>
 
-          <form action="what.html" method="get">
+          <form action="test.html" method="get">
 
             <div class="field-wrap">
             <label>
