--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@
             </li>
             <li>
                 
-                <a href="#">
+                <a href="what.html">
                     <i class="fa fa-folder-open" onclick="document.location="what.html";"></i> Track Your Hours
                 </a>
              
