--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
                      <div class="col-lg-12">
                         <div class="col-xs-12 col-sm-4">
                            <figure>
-                              <img style=width:300;height:300; alt="USER SILHOUETTE"; src="https://thumbsnap.com/3prt12V8">
+                              <img style=width:300;height:300; alt="USER SILHOUETTE"; src="https://thumbsnap.com/i/3prt12V8.png?0822">
 
                            </figure>
                            <div class="row">
