--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
                      <div class="col-lg-12">
                         <div class="col-xs-12 col-sm-4">
                            <figure>
-                              <img style="width:200px;height:200px;" alt="User Silhouette" src="https://http://thumbsnap.com/i/eeG2VqxX.png?0822">
+                              <img style="width:200px;height:200px;" alt="User Silhouette" src="https://thumbsnap.com/i/eeG2VqxX.png?0822">
 
                            </figure>
                            <div class="row">
