--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="FullSizeRender.jpg" alt="">
               <h4>Janelle C.</h4>
-              <p class="text-muted"> I'm sixteen, and I love bubble tea and Kendrick Lamar.</p>
+              <p class="text-muted"> I'm sixteen, and I love bubble tea and listening to Kendrick Lamar.</p>
             </div>
           </div>
         </div>
