--- a/log.html
+++ b/log.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- were the code  came from=https://codepen.io/ehermanson/pen/KwKWEv -->
 <head>
-  <script
+  <script>
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
