--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="hillary.png" alt="">
               <h4>Hillary S.</h4>
-              <p class="text-muted">I love cats, electric swing and stand up comedy!!!!!</p>
+              <p class="text-muted">“We demand rigidly defined areas of doubt and uncertainty!”― Douglas Adams, The Hitchhiker's Guide to the Galaxy</p>
             </div>
           </div>
           
